--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-5 py-2 flex justify-between items-center">
             <a href="#" class="flex items-center gap-3">
-                <img src="https://i.ibb.co/QFj6dvk/Logo-Yayasan.png" alt="Logo Darul Huda" class="h-14 flex-shrink-0">
+                <img src="https://i.ibb.co/QjmXHJkJ/Logo-Yayasan.png" alt="Logo Darul Huda" class="h-14 flex-shrink-0">
                 <div class="flex flex-col">
                     <span class="block font-bold text-lg leading-tight text-teal-700">PON-PES DARUL HUDA</span>
                     <span class="block text-sm leading-tight text-gray-600">PENGARANG</span>
